--- a/_posts/blog/2017-08-15-first.markdown
+++ b/_posts/blog/2017-08-15-first.markdown
@@ -1,26 +1,16 @@
 ---
 layout: post
-title: 测试	
+title: 测试----------------
 categories: Blog
 description: 总结是为了更好地上路。
 keywords: 201888888888888, 计划, 总结
 ---
-总结是为了更好地再上路。
+测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
 
-在我人生的前二十几年是没有做年度计划和总结的习惯的，但在 2015-12-31 时和饭团团员们心血来潮一起做了个 2016 PLAN，现在 2016 已经被完整地甩在身后，是时候回顾以明得失，展望以知进退了。
+测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
 
-如果用一句话来概括，这一年是玩得不错，学得不咋样；展开来讲的话，按传统得欲扬先抑，先把批评做在前头，上成绩单：
+测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
 
-## 成绩单
-
-当时制定的计划一共 16 项，现状如下：
-
-![2016 Plan Progress](/images/blog/2016-plan-progress.png)
-
-**自评**
-
-惨，不及格。
-
-当然我的过去就是我存在的基石，一味地全盘否定并不能改变什么，需要认可我自己的是清单里可能最难、但对我提升最大的两项任务完成了。
+测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
 
 **反思**
