--- a/_posts/2017-08-08-test.md
+++ b/_posts/2017-08-08-test.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 测试 
-categories: 测试
-description: RTFSC 是程序员打怪升级路上避不开的功课，那营造一个舒适的环境来提升上课的体验就很有必要了。
-keywords: OpenGrok, RTFSC
+categories: test
+description: test。
+keywords: test
 ---
 
 测试测试
