--- a/_posts/blog/2017-11-13-mysql2.md
+++ b/_posts/blog/2017-11-13-mysql2.md
@@ -11,7 +11,7 @@ DQL: Data Query Language
 作用: 查询数据  
 常用关键字: SELECT  
 
-#### select语句  
+#### SELECT语句  
 * 基本语法  
 * SELECT [DISTINCT] * column1, column2... FROM table;  
 * DISTINCT可选，指显示结果时，是否剔除重复数据  
@@ -99,6 +99,7 @@ mysql> SELECT * FROM student WHERE name LIKE '李%';
 查询数学分>80,语文分>80的同学  
 ```
 mysql> SELECT * FROM student WHERE math>80 AND chinese>80;
+```  
 
 <b>ORDER BY 字句排序查询结果</b>  
 * ASC升序，DESC降序,默认ASC  
